// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IdeaPageBody /> it should render a div with provided className 1`] = `
<div
  className="idea__body css-class"
>
  <div
    className="block"
    id="idea-body"
  >
    <h2
      className="h2"
    >
      Description
    </h2>
    <FormattedHTMLMessage
      message="<p>blabla</p>"
      tagName="span"
    />
  </div>
  <IdeaPageTrashBlock
    idea={
      Object {
        "body": "<p>blabla</p>",
        "id": 1,
      }
    }
  />
  <Connect(IdeaPageButtons)
    idea={
      Object {
        "body": "<p>blabla</p>",
        "id": 1,
      }
    }
  />
</div>
`;

exports[`<IdeaPageBody /> it should render idea media, object and url when provided 1`] = `
<div
  className="idea__body "
>
  <img
    alt=""
    className="block img-responsive"
    id="idea-media"
    src="image.png"
  />
  <div
    className="block"
    id="idea-body"
  >
    <h2
      className="h2"
    >
      Description
    </h2>
    <FormattedHTMLMessage
      message="<p>blabla</p>"
      tagName="span"
    />
  </div>
  <div
    className="block"
    id="idea-object"
  >
    <h2
      className="h2"
    >
      Objectif
    </h2>
    <FormattedHTMLMessage
      message="<p>blabla</p>"
      tagName="span"
    />
  </div>
  <div
    className="block"
    id="idea-url"
  >
    <h2
      className="h2"
    >
      Informations complémentaires
    </h2>
    <p>
      <a
        className="external-link"
        href="http://www.google.fr"
      >
        http://www.google.fr
      </a>
    </p>
  </div>
  <IdeaPageTrashBlock
    idea={
      Object {
        "body": "<p>blabla</p>",
        "id": 1,
        "media": Object {
          "url": "image.png",
        },
        "object": "<p>blabla</p>",
        "url": "http://www.google.fr",
      }
    }
  />
  <Connect(IdeaPageButtons)
    idea={
      Object {
        "body": "<p>blabla</p>",
        "id": 1,
        "media": Object {
          "url": "image.png",
        },
        "object": "<p>blabla</p>",
        "url": "http://www.google.fr",
      }
    }
  />
</div>
`;

exports[`<IdeaPageBody /> it should show idea body, trash block and buttons 1`] = `
<div
  className="idea__body "
>
  <div
    className="block"
    id="idea-body"
  >
    <h2
      className="h2"
    >
      Description
    </h2>
    <FormattedHTMLMessage
      message="<p>blabla</p>"
      tagName="span"
    />
  </div>
  <IdeaPageTrashBlock
    idea={
      Object {
        "body": "<p>blabla</p>",
        "id": 1,
      }
    }
  />
  <Connect(IdeaPageButtons)
    idea={
      Object {
        "body": "<p>blabla</p>",
        "id": 1,
      }
    }
  />
</div>
`;
